# zephyr_learning

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  prj.conf  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
boards/: qemu_x86.overlay
dts/bindings/fakee/: fakee,hww.yaml
modules/: modules.cmake
modules/fakee/: CMakeLists.txt  Kconfig  hww.c  hww.h
modules/fakee/boards/: qemu_x86.overlay
modules/fakee/dts/bindings/fakee/: fakeeab,hww.yaml
semaphores_and_mutexes_exercise/: CMakeLists.txt  sem_and_mut.c  sem_and_mut.h
src/: main.c
threads_exercise/: CMakeLists.txt  threads.c  threads.h
